Updated navbar toggle icon color and menu background for mobile view

--- a/assets/css/rtl.css
+++ b/assets/css/rtl.css
@@ -34,7 +34,11 @@
   border-bottom: 10px solid transparent;
   margin-left: 5px;
 }
-
+.navbar-toggler .navbar-toggler-icon {
+  color: aliceblue;
+  background-color:whitesmoke;
+  border-radius: 5px;
+}
 
 
 
